Addded the (d), (e), and (f) for Part A of the assignment

--- a/sheet-02/Problem_A_Monte_Carlo.ipynb
+++ b/sheet-02/Problem_A_Monte_Carlo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "id": "b8ee7e9f",
    "metadata": {},
    "outputs": [],
@@ -351,6 +351,108 @@
     "\n",
     "# To use, just call:\n",
     "interactive_run_simulation()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34544c1b",
+   "metadata": {},
+   "source": [
+    "## Variance estimator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a740f291",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def variance_estimator(pi: float, a: float, n: int):\n",
+    "    return ((pi - pi ** 2)/n) + (a - a**2)/(((2*a - 1)**2)*n) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "951b2b5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import cm\n",
+    "from matplotlib.ticker import LinearLocator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "c4936269",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4f5f459688d845968070de5b63443b68",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=50, description='n', max=1000, min=1), Checkbox(value=True, description=…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact\n",
+    "\n",
+    "def plot_variance_heatmap(a_min=0.01, a_max=0.99, pi_min=0.01, pi_max=0.99, n_val=50, res=20, use_log=False):\n",
+    "    a_vals = np.linspace(a_min, a_max, res)\n",
+    "    pi_vals = np.linspace(pi_min, pi_max, res)\n",
+    "    A, PI = np.meshgrid(a_vals, pi_vals)\n",
+    "    N = n_val\n",
+    "\n",
+    "    VAR = variance_estimator(PI, A, N)\n",
+    "    display_VAR = np.copy(VAR)\n",
+    "    if use_log:\n",
+    "        display_VAR = np.log10(VAR + 1e-10)\n",
+    "        # display_VAR = np.log10(VAR + 1e-10)\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(10, 8))\n",
+    "    c = ax.imshow(display_VAR, cmap=\"plasma\", origin=\"lower\",\n",
+    "                  extent=[a_min, a_max, pi_min, pi_max],\n",
+    "                  aspect='auto')\n",
+    "\n",
+    "    # Display the values on the cells\n",
+    "    for i in range(res):\n",
+    "        for j in range(res):\n",
+    "            val = display_VAR[i, j]\n",
+    "            if use_log:\n",
+    "                text = f\"{val:.2g}\"\n",
+    "            else:\n",
+    "                text = f\"{VAR[i, j]:.1e}\"\n",
+    "            C = 0.95\n",
+    "            ax.text(a_vals[j]*C + 0.025, pi_vals[i]*C+0.025, text, ha=\"center\", va=\"center\", color=\"white\", fontsize=8, fontweight='bold')\n",
+    "\n",
+    "    ax.set_xlabel('$a$')\n",
+    "    ax.set_ylabel('$\\\\pi$')\n",
+    "    zlabel = '$\\\\log_{10}$ Variance' if use_log else 'Variance $\\\\mathbb{V}[\\\\pi_{ML}]$'\n",
+    "    ax.set_title(f'Variance as function of $a$ and $\\\\pi$ (n={N})')\n",
+    "    fig.colorbar(c, ax=ax, label=zlabel)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_variance_heatmap_with_n(a_min=0.01, a_max=0.99, pi_min=0.01, pi_max=0.99, n_min=1, n_max=100, res=20):\n",
+    "    @interact(n=(n_min, n_max, 1), use_log=True)\n",
+    "    def interactive_plot(n=50, use_log=False):\n",
+    "        plot_variance_heatmap(a_min, a_max, pi_min, pi_max, n_val=n, res=res, use_log=use_log)\n",
+    "\n",
+    "plot_variance_heatmap_with_n(n_max=1000)\n",
+    "\n"
    ]
   }
  ],
